feat(mybox): add automatic task triggers and task editor
